# webull-openapi-skills

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  SKILL.md  pyproject.toml
references/: api_reference.md  llms_au.md  llms_br.md  llms_hk.md  llms_jp.md  llms_mx.md  llms_my.md  llms_sg.md  llms_th.md  llms_us.txt  skill_market_data.md  skill_trading.md
tests/: __init__.py  test_account.py  test_assets.py  test_cli.py  test_config.py  test_fundamentals.py  test_guards.py  test_instrument.py  test_order.py  test_region_config.py  test_result.py  test_screener.py  test_stock_market_data.py  test_stock_order.py  test_watchlist.py
webull_skill/: __init__.py  audit.py  cli.py  config.py  constants.py  env_router.py  errors.py  formatters.py  guards.py  region_config.py  result.py  risk_engine.py  runtime.py  sdk_client.py
webull_skill/market_data/: __init__.py  crypto.py  event.py  fundamentals.py  futures.py  screener.py  stock.py  watchlist.py
webull_skill/trading/: __init__.py  account.py  assets.py  crypto_order.py  event_order.py  futures_order.py  instrument.py  option_order.py  order.py  stock_order.py
