[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webull-openapi-skills"
version = "1.0.0"
description = "Webull OpenAPI Skill built on the official Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "webull-openapi-python-sdk==2.0.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
webull-skill = "webull_skill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["webull_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
